--- a/css/index.css
+++ b/css/index.css
@@ -107,12 +107,14 @@ list-style-type: none;
   background-color: transparent;
   margin-top: 0px;
   padding-top: 0px;
-  position:sticky;
+  position: sticky;
   top:0px;
   z-index: 100;
   font-size: 20px;
   width: 100vw;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  line-height: 50px;
 }
 
 #headerImage {
