--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 20px;
+}
+
 body {
   background: linear-gradient(to bottom,
       #ffe0b2, #ffffcc, #e6ffe6, #ccddff, #e0b0ff, #ffdddd,#ffe0b2);
@@ -12,23 +16,39 @@ body, h1, h2, h3, pre, code {
   align-items: center;
 }
 
+#headerImage {
+  padding:20px;
+}
+
 h1 {
   color: rgb(0, 0, 0);
-  font-size: 50px; 
+  font-size: 2.5rem;
   text-shadow: 3px 3px 5px #0000007e;
+  text-align:center;
 }
 
 h2 {
-  font-size:40px;
+  font-size: 2rem;
 }
 
 h3 { 
-  font-size: 30px;
+  font-size: 1.5rem;
 }
 
 h4{
   margin: 0px;
   padding: 0px;
+  font-size: 1rem;
+}
+
+p {
+  font-size:1.0rem;
+  padding:10px;
+  margin: 10px;
+}
+
+ul {
+  font-size:20px;
 }
 
 section {
@@ -37,18 +57,19 @@ section {
 
 #About p {
   line-height: 50px;
-  width: 1000px;
+  max-width: 600px;
 }
 
 #job-desc, #skill-desc {
   display: flex;
   flex-direction: row;
+  justify-content:space-between;
 }
 
 #languageList, #generalList {
   display:flex;
   flex-direction: column;
-  margin-left: 30px;
+  margin-left: 1rem;
 }
 #languageList p, #generalList p, #job-desc p{
   margin: 10px;
@@ -56,13 +77,6 @@ section {
   padding-bottom: 0px;
   margin-top: 0px;
   padding-top: 0px;
-  width:300px;
-}
-
-p {
-  font-size:20px;
-  padding:10px;
-  margin: 10px;
 }
 
 #guitar{
@@ -73,18 +87,13 @@ p {
   border-style: groove;
 }
 
-ul {
-  font-size:20px;
-}
 
-#Experience ul {
+#outerList {
+  list-style-type: none;
   border-style: groove;
   border-color: #000000;
   line-height:50px;
-}
-
-#outerList {
-list-style-type: none;
+  max-width: 600px;
 }
 
 #Connect ul {
@@ -93,14 +102,13 @@ list-style-type: none;
   margin: 0;
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 100px;
 }
 
 .navbar a:hover {
   mix-blend-mode:hard-light;
   background-color: #00000059;
 }
-
 .navbar {
   box-shadow: 0px 0px 20px rgb(0, 0, 0);
   backdrop-filter: blur(10px);
@@ -111,13 +119,95 @@ list-style-type: none;
   top:0px;
   z-index: 100;
   font-size: 20px;
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   line-height: 50px;
 }
-
-#headerImage {
-  padding:20px;
+.video{
+  width: 480px;
+  height: 270px;
 }
 
+.connectGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 50px;
+  text-align: center;
+}
+
+.vidGrid{
+  display:grid;
+  text-align:center;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+  gap: 20px;
+}
+
+/* Tablet Media Query */
+@media(max-width: 1000px){
+  html{
+    font-size:17px;
+  }
+  p{
+    line-height:25px;
+  }
+  #outerList {
+    padding-left: 20px;
+  }
+  #outerList {
+    padding-left: 10px;
+    border-style: dashed;
+    border-color: rgb(134, 0, 74);
+  }
+  #about {
+    border-style:dashed;
+    border-color: rgb(134, 0, 74);
+  }
+  #Connect ul {
+    flex-direction: row;
+    gap: 75px;
+    padding: 20px;
+    border: dashed;
+    border-color: rgb(134, 0, 74);
+  }
+  .vidGrid iframe{
+    width:100%;
+    height:fit-content;
+    justify-self: center;
+  }
+}
+
+/* Phone Media Query */
+@media(max-width: 550px){
+  html{
+    font-size: 15px;
+  }
+  p {
+    line-height: 20px;
+  }
+  #outerList {
+    padding-left: 10px;
+    border-style: dotted;
+    border-color: rgb(255, 0, 140);
+  }
+  #about {
+    border-style:dotted;
+    border-color: rgb(255, 0, 140);
+  }
+  #Connect ul {
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+    border-style:dotted;
+    border-color: rgb(255, 0, 140);
+  }
+  .vidGrid {
+    grid-template: repeat(4, 1fr) / repeat(1, 1fr);
+    gap: 10px;
+  }
+
+  .navbar {
+    font-size: 0.95rem;
+  }
+}
